refactor: correct usage of stream terminal operation in ViewDonationDetailsService